Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-jan-2010 Christophe Demko
# Correcting bugs in JForm
# Correcting bad display in module and plugin edit

20-Jan-2010 Jean-Marie Simonet
+ Added xx-XX administrator language for testing purposes. Included an xx-XX.override.ini and a custom transliteration.php.
^ Modified language.php to look first for site then admin language folders for the custom transliterate function

19-Jan-2010 Hannes Papenberg
# Renamed the folder for the profile plugin to profile from profiles
# Improved performance of JArchiveZip by about 30% - Thanks Omar Ramos!
# Fixed type of the created_by field in the article edit screen - Thanks Omar Ramos!
# Fixed filter of type selector in plugin manager - Thanks Omar Ramos!
# Removed obsolete , in media/system/js/rules.js, fixes category saving issue in IE8 - Thanks Omar Ramos!


19-Jan-2010 Jean-Marie Simonet
^ Modified example content plugin xml. Added a language folder with a sample ini file

19-Jan-2010 Andrew Eddie
 + Added JHtmlImage::system helper.
 ^ Changed JHtmlGrid::sort to use new system images check.
 # Fixed bug in JRegistryFormatINI where stringToObject would not correctly handle sections.

18-Jan-2010 Louis Landry
^ Adjust copyright notices for 2010

18-Jan-2010 Jean-Marie Simonet
^ Added Description metadata in plugins edit screen

18-Jan-2010 Hannes Papenberg
# Changed default namespace of JRegistry from 'default' to '_default' - Thanks Robert Deutz!

18-Jan-2010 Jean-Marie Simonet
# Fixed typos in language and router

18-Jan-2010 Jean-Marie Simonet
^ Improve default alias transliteration

18-Jan-2010 Andrew Eddie
 # Fixed PHP notice when invalid itemid processed by JRouterSite; JRouter* code-formatting.

16-Jan-2010 Mark Dexter
^ Partial refactoring of com_contact