@@ -83,8 +83,8 @@ class ConfigModelComponent extends JModelForm
 
 		// Load common and local language files.
 		$lang = &JFactory::getLanguage();
-		$lang->load($option);
 		$lang->load($option, JPATH_COMPONENT);
+		$lang->load($option);
 
 		$result = JComponentHelper::getComponent($option);
 
