@@ -213,9 +213,9 @@ class PluginsModelPlugin extends JModelForm
 		}
 
 		// Load the core and/or local language file(s).
+		$lang->load('plg_'.$folder.'_'.$element, $client->path.'/plugins/'.$folder.'/'.$element);
 		$lang->load('plg_'.$folder.'_'.$element, JPATH_SITE);
 		$lang->load('plg_'.$folder.'_'.$element, JPATH_ADMINISTRATOR);
-		$lang->load('joomla', $client->path.'/plugins/'.$folder.'/'.$element);
 
 		// If an XML file was found in the component, load it first.
 		// We need to qualify the full path to avoid collisions with component file names.
