@@ -162,9 +162,9 @@ class TemplatesModelStyle extends JModelForm
 		$formFile		= JPath::clean($client->path.'/templates/'.$template.'/templateDetails.xml');
 
 		// Load the core and/or local language file(s).
+		$lang->load('tpl_'.$template, $client->path.DS.'templates'.DS.$template);
 		$lang->load('tpl_'.$template, JPATH_SITE);
 		$lang->load('tpl_'.$template, JPATH_ADMINISTRATOR);
-		$lang->load('joomla', $client->path.DS.'templates'.DS.$template);
 
 		if (file_exists($formFile))
 		{
