@@ -148,10 +148,10 @@ abstract class JModuleHelper
 		if (!$module->user && file_exists($path))
 		{
 			$lang = &JFactory::getLanguage();
-			// 1.5 or Core
-			$lang->load($module->module);
 			// 1.6 3PD
 			$lang->load($module->module, dirname($path));
+			// 1.5 or Core
+			$lang->load($module->module);
 
 			$content = '';
 			ob_start();
